# xenoform

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  JOURNAL.md  LICENCE.md  README.md  publish.yml  pyproject.toml
.github/workflows/: lint-test.yml  publish.yml
examples/: distance_matrix.py  loop.py
src/test/: conftest.py  test_basic.py  test_caching.py  test_callable.py  test_complex.py  test_compound_types.py  test_config.py  test_cxx_std_conflict.py  test_cxx_std_invalid.py  test_external_shared.py  test_external_source.py  test_external_static.py  test_extmodule.py  test_format.py  test_freethreaded.py  test_help.py  test_kwargs.py  test_method.py  test_nested.py  test_numpy.py  test_opaque.py  test_override.py  test_qualifiers.py  test_rvp.py  test_slice.py  test_specialisations.py  test_stl.py  test_types.py  test_typing.py  test_utils.py  test_vectorise.py
src/test/xenoform-test-ext/: README.md  pyproject.toml  setup.py
src/test/xenoform-test-ext/include/: module.h
src/test/xenoform-test-ext/src/: module.cpp
src/test/xenoform-test-ext/xenoform_test_ext/: __init__.py  __init__.pyi
src/xenoform/: __init__.py  compile.py  config.py  cppmodule.py  extension_types.py  logger.py  types.py  utils.py
