[project]
name = "xenoform"
version = "0.1.6"
description = "Inlined C++ functions"
readme = "README.md"
authors = [
    { name = "virgesmith", email = "andrew@friarswood.net" }
]
license = "MIT"
license-files = ["LICENCE.md"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "itrx>=0.2.1",
    "numpy>=2.3.2",
    "pybind11>=3.0.0",
    "setuptools>=80.9.0",
    "types-setuptools>=80.9.0.20250529",
]

[project.urls]
"Homepage" = "https://github.com/virgesmith/xenoform"
"Bug Tracker" = "https://github.com/virgesmith/xenoform/issues"

[project.optional-dependencies]
examples = [
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "clang-format>=21.1.8",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
    "types-toml>=0.10.8.20240310",
]

[tool.pytest.ini_options]
testpaths = [
  "src/test"
]
addopts = "--cov=src/xenoform --cov-report html --cov-fail-under=97 --doctest-modules" #--doctest-glob=README.md"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ARG", "B", "C", "D103", "E", "F", "I", "N", "PERF", "PTH", "RET", "RUF", "SIM", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/test/*.py" = ["D103"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
