[project]
name = "xenoform"
version = "0.1.10"
description = "Inlined C++ functions"
readme = "README.md"
authors = [
    { name = "virgesmith", email = "andrew@friarswood.net" }
]
license = "MIT"
license-files = ["LICENCE.md"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "clang-format>=21.1.8",
    "itrx>=0.2.1",
    "numpy>=2.3.2",
    "pybind11>=3.0.0",
    "pydantic-settings>=2.12.0",
    "setuptools>=80.9.0",
    "types-setuptools>=80.9.0.20250529",
]

[project.urls]
"Homepage" = "https://github.com/virgesmith/xenoform"
"Bug Tracker" = "https://github.com/virgesmith/xenoform/issues"

[project.optional-dependencies]
examples = [
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "ty>=0.0.56",
    "xenoform-test-ext",
]

[tool.pytest.ini_options]
testpaths = [
  "src/test"
]
# Coverage is reported locally but the threshold is NOT enforced here: a pre-existing `ext/`
# skews which build/caching branches run, so local coverage can read lower than a clean run.
# The 100% gate is enforced in CI on a clean checkout (see .github/workflows/lint-test.yml).
addopts = "--cov=src/xenoform --cov-report html --doctest-modules" #--doctest-glob=README.md"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ARG", "B", "C", "D103", "E", "F", "I", "N", "PERF", "PTH", "RET", "RUF", "SIM", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/test/*.py" = ["D103"]

[tool.uv.workspace]
members = [
    "src/test/extmodule",
    "src/test/xenoform-test-ext",
]

[tool.uv.sources]
xenoform-test-ext = { workspace = true }
